Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-13: Port Giraph to YARN (ereisman)

  GIRAPH-600: Create an option to do output during computation (majakabiljo)

  GIRAPH-599: Hive IO dependency issues with some Hadoop profiles (nitay via majakabiljo)

  GIRAPH-577: Create a testing framework that doesn't require I/O formats (ves via apresta)

  GIRAPH-593: Update Hive IO performance improvements (nitay)

  GIRAPH-594: auto set reusing objects (nitay)

  GIRAPH-597: Don't reuse vertex by default in SimpleHiveToVertex (majakabiljo)

  GIRAPH-588: More flexible Hive input (majakabiljo)

  GIRAPH-587: Refactor configuration options (nitay)

  GIRAPH-581: More flexible Hive output (majakabiljo)

  GIRAPH-579: Make it possible to use different out-edges data structures
  for input and computation (apresta)

  GIRAPH-582: Create a generic option for determining the number of
  supersteps that a job runs for (aching)

  GIRAPH-586: Customizable default vertex value (apresta)

  GIRAPH-580: NPE in HiveGiraphRunner when the vertex output format is
  not defined (aching)

  GIRAPH-510: Remove HBase Cruft (kelarini via nitay)

  GIRAPH-566: Make option for aggregators to be configurable (majakabiljo)

  GIRAPH-575: update hive-io (nitay)

  GIRAPH-576: BspServiceMaster.failureCleanup() shouldn't pass null in
              observers' applicationFailed() method (jgarms via nitay)

  GIRAPH-547: Allow in-place modification of edges (apresta)

  GIRAPH-537: Fix log messages produced by aggregators (majakabiljo)

  GIRAPH-480: Add convergence detection to org.apache.giraph.examples.RandomWalkVertex (ssc)

  GIRAPH-565: Make an easy way to gather some logs from workers on master (majakabiljo)

  GIRAPH-559: use hive-io-experimental release (nitay)

  GIRAPH-562: Implement getConf/setConf in AbstractHive classes (majakabiljo)

  GIRAPH-561: Only print vertex/edge input classes if not null (aching)

  GIRAPH-554: Set PartitionContext in InternalVertexRunner (majakabiljo)
